REGRESSION(307222@main): Broke WPE clang build https://bugs.webkit.org/show_bug.cgi?id=307583

Reviewed by Yusuke Suzuki.

Fix the build changing the template definition.

* Source/WTF/wtf/GenerationalSet.h:

Canonical link: https://commits.webkit.org/307328@main